--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
     <title>My Weather App</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+    <header class = "container text-center text-white bg-dark p-3">
+        <h1>Weather App</h1>
+    </header>
+<div class = "container-fluid">
+    <div class = "row">
+        <aside class="col-lg-4 bg-light">
+            <h4 "mt-2">Search City</h4>
+            <div class="form-inline form-group">
+                <input class="form-control" type="text" id="search-city"/>
+                <button class="btn btn-primary" id="search-btn"><i class="fa fa-search"></i></button>
+            </div>
+            <ul class="list-group"></ul>
+        </aside>
+
+        <div class="col-lg-8">
+            <div id="current-day" class="mt-2"></div>
+            <div id="future-forcast" class="row mt-2">
+            </div>
+        </div>
+    </div>
+</div>
+<script src="javascript.js"></script>
 </body>
 </html>
