--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class = "container-fluid">
     <div class = "row">
         <aside class="col-lg-4 bg-light">
-            <h4 "mt-2">Search City</h4>
+            <h4 class="mt-2">Search City</h4>
             <div class="form-inline form-group">
                 <input class="form-control" type="text" id="search-city"/>
                 <button class="btn btn-primary" id="search-btn"><i class="fa fa-search"></i></button>
@@ -33,6 +33,7 @@
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 <script src="javascript.js"></script>
 </body>
 </html>
