Added windspeed value and code for weather icon

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <p>Wind Speed: <span id="current-windspeed"></span></p>
                 <p>UV Index: <span id="current-uvindex"></span></p>
                 <p>Real Feel: <span id="current-feelslike"></span></p>
+                <p><span id="weather-icon"></span></p>
                 <img src="" alt="Description of image" id="current-weather-logo">
 
             </div>
